tests/invalid/ann_assign_tuple_genexpr_wrong_annotation/main.py
def run_case() -> None:
    a: int = tuple(i for i in [1, 2, 3])

if __name__ == "__main__":
    run_case()
